# bulwark

./: .gitignore  CLAUDE.md  Cargo.toml  PROJECT.md  PROMPT.md
config/: app.toml  dedicated.toml
crates/bulwark-app/: Cargo.toml
crates/bulwark-app/src/: input_mapping.rs  main.rs  ui.rs
crates/bulwark-app/src/gamepad/: gilrs_backend.rs  macos.rs  mod.rs
crates/bulwark-app/src/states/: main_menu.rs  mod.rs  settings.rs  settings_audio.rs  settings_controls.rs  settings_graphics.rs  splash.rs
crates/bulwark-core/: Cargo.toml
crates/bulwark-core/src/: config.rs  input.rs  lib.rs
crates/bulwark-dedicated/: Cargo.toml
crates/bulwark-dedicated/src/: main.rs
crates/bulwark-net/: Cargo.toml
