[package]
name = "bulwark-app"
version = "0.1.0"
edition = "2021"

[dependencies]
bulwark-core = { path = "../bulwark-core" }
bulwark-net = { path = "../bulwark-net" }
macroquad = "0.4"

[target.'cfg(target_os = "macos")'.dependencies]
objc2-game-controller = "0.3"
objc2-foundation = "0.3"
objc2 = "0.6"

[target.'cfg(not(target_os = "macos"))'.dependencies]
gilrs = "0.11"
